...
            onClick = onClick,
        )
    } else {
        Modifier
    }
    val semanticsModifier = Modifier
        .testTag("game-card")
        .semantics(mergeDescendants = true) {
            role = Role.Button
            contentDescription = description
        }
        .then(interaction)
    val titleColor = if (entry.problem == null) MaterialTheme.colorScheme.onSurface else MaterialTheme.colorScheme.onSurfaceVariant
...
